--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp_materialize",
+  "name": "gulp4_materialize",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://donDom@bitbucket.org/donDom/gulp_materialize.git"
+    "url": "https://worldpres@bitbucket.org/worldpres/gulp4_materializecss.git"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
